<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/delete_list"
        android:title="@string/delete_list"
        />

    <item
        android:id="@+id/clear_list"
        android:title="@string/clear_list"
        />

    <item
        android:id="@+id/share_list"
        android:title="@string/share_list"
        />

    <item
        android:id="@+id/new_item"
        android:title="@string/new_item"
        android:icon="@drawable/baseline_new_shopping_item"
        app:actionLayout="@layout/action_layout"
        app:showAsAction="always|collapseActionView"
        android:orderInCategory="1"
        />

    <item
        android:id="@+id/save_item"
        android:title="@string/save"
        android:icon="@drawable/baseline_save"
        app:showAsAction="always"
        android:orderInCategory="2"
        />

</menu>